--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ArcheryScore</string>
+    <!-- Google OAuth 2.0 Web Client ID desde Firebase Console -->
+    <string name="default_web_client_id">428870165249-e3nmrkefqaq2shln9rn1dmn91fg1otsp.apps.googleusercontent.com</string>
 </resources>
